--- a/angrybird_logic.csproj
+++ b/angrybird_logic.csproj
@@ -7,4 +7,16 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Compile Remove="ConsoleInterface\Units\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="ConsoleInterface\Units\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="ConsoleInterface\Units\**" />
+    </ItemGroup>
+
 </Project>
