--- a/angrybird_logic.csproj
+++ b/angrybird_logic.csproj
@@ -5,10 +5,15 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+        <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
     </PropertyGroup>
 
     <ItemGroup>
       <Compile Remove="ConsoleInterface\Units\**" />
+      <Compile Update="View\Program.cs">
+        <Link>ConsoleView\Program.cs</Link>
+      </Compile>
     </ItemGroup>
 
     <ItemGroup>
