- Refactoring Units, adding interfaces for their behavior. - Added Level Manager and Spawner classes.

--- a/angrybird_logic.csproj
+++ b/angrybird_logic.csproj
@@ -16,6 +16,8 @@
         <Link>ConsoleView\Program.cs</Link>
       </Compile>
       <Compile Remove="Utils\StateMachine\**" />
+      <Compile Remove="Units\Rock.cs" />
+      <Compile Remove="Units\Bomb.cs" />
     </ItemGroup>
 
     <ItemGroup>
